--- a/pythoncode/pytest.ini
+++ b/pythoncode/pytest.ini
@@ -1,7 +1,9 @@
 [pytest]
-;;markers = add :caculate add function
-;;          div : caculate div function
-;;python_files = check_* test_*
-;;python_classes = Check*
-;;python_functions = check_*
+markers = add : caculate add function
+          sub : caculate sub function
+          mul : caculate mul function
+          div : caculate div function
+;python_files = check_* test_*
+python_classes = Test*
+python_functions = check_* test_*
 addopts = -vs
